# AI_photo

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  improvement_suggestion.yml
.github/workflows/: deploy-docs.yml  docker-build-push-ai.yml  docker-build-push-frontend.yml  docker-build-push-server.yml  docker-build-push.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  dependencies.py  main.py
doc/: architecture_design.md  backend_analysis.md  developer_guide.md  frontend_analysis.md  user_guide.md
doc/prompt/: 2025-01-09.md  2025-12-25.md  2026-01-07.md
docker-compose/: docker-compose-pg.yml
frontend/: package.json
frontend/src/: App.jsx
package/ai/: .dockerignore  Dockerfile  Dockerfile.gpu  README.md  main.py  pyproject.toml  requirements-gpu.txt  requirements.txt
package/ai/app/: config.py  main.py
package/ai/app/core/: logger.py
package/ai/app/data/: categories.json
package/ai/app/routers/: ai_config.py  face.py  image_classification.py  object_detection.py  ocr.py  system.py  tickets.py
package/ai/app/services/: ai_config_manager.py  face_service.py  fly_ticket_parser.py  image_classification_service.py  model_downloader.py  model_manager.py  ocr_service.py  ticket_parser.py  ticket_service.py
package/official-site/: .gitignore  README.md  index.md  (+5 more)
package/server/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  start.py
package/server/alembic/: README.md  env.py
package/server/alembic/versions/: 06ce8a56658b_add_users_table.py  5ff0d3a3b285_add_owner_id_index.py  96354f1896be_add_shared_albums.py  a065d6d8e0e3_add_face.py  b5c7da498858_add_owner_id_to_album_and_photo.py
package/server/app/: __init__.py  dependencies.py  main.py  worker.py
package/server/app/api/: agent.py  agent_token.py  album.py  annual_report.py  auth.py  classification.py  deps.py  face.py  flight_ticket.py  index.py  location.py  login.py  media.py  ocr.py  photo.py  search.py  settings.py  stats.py  system.py  tasks.py  train_ticket.py  user.py
package/server/app/blog/: __init__.py  public.py  router.py
package/server/app/core/: config_manager.py  logger.py  migration.py  security.py
package/server/app/crud/: __init__.py  agent.py  agent_token.py  album.py  annual_report.py  cluster.py  crud_vector.py  dashboard.py  face.py  flight_ticket.py  location.py  ocr.py  photo.py  scene.py  search_vector.py  tag.py  train_ticket.py  user.py
package/server/app/db/: __init__.py  base.py  init_db.py  session.py
package/server/app/db/models/: __init__.py  agent.py  agent_token.py  album.py  album_photos.py  app_setting.py  cluster.py  face.py  image_description.py  image_vector.py  index_log.py  location.py  media.py  ocr.py  person.py  photo.py  photo_metadata.py  scene.py  scenic.py  system.py  tag.py  task.py  trip.py  user.py
package/server/app/github/: __init__.py  config.py  db.py  github.py
package/server/app/schemas/: agent.py  agent_token.py  album.py  annual_report.py  dashboard.py  face.py  filter.py  flight_ticket.py  image_description.py  location.py  metadata.py  ocr.py  photo.py  scene.py  tag.py  task.py  train_ticket.py  user.py
package/server/app/service/: __init__.py  face_cluster.py  indexer.py  similar_photo.py  storage.py  task_manager.py  task_worker.py
package/server/app/service/agent/: service.py  tools.py
package/server/app/service/live_photo/: __init__.py  android.py  apple.py  base.py  vivo.py
package/server/app/service/tasks/: album.py  basic.py  classification.py  face.py  metadata.py  ocr.py  scan.py  similar.py  thumbnail.py  tickets.py  visual_description.py
package/server/app/utils/: exif.py  filename.py  motion_photo.py
package/server/doc/: help.md
package/server/railway/: __init__.py  api.py  build_database.py  crud.py  dependencies.py  main.py  schemas.py  start.py
package/server/railway/data/: city.csv  station_name.csv
package/server/railway/db/: __init__.py  base.py  dependencies.py  init_db.py  session.py
package/server/railway/db/models/: __init__.py  models.py
package/server/railway/source/: station.csv  train.csv  train_operation_plan.csv
package/server/railway/synchronize/: UA.txt  __init__.py  build_database.py  config.py  create_schedule.py  create_station.py  create_train.py  get_data.py  main.py
package/server/railway/util/: __init__.py  city.py
package/server/resources/: scenes_5A.csv
package/server/resources/rg_data/: admin2Codes.txt  countries.json
package/server/reverse_geocoder/: __init__.py
package/server/yolo_ocr/: pre_picture.py  ticket_parser.py  yolo_ocr.py
(+259 files in other folders)
