[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "fastapi>=0.110.0",
  "insightface>=0.7.3",
  "modelscope>=1.33.0",
  "numpy>=1.26.0",
  "onnxruntime>=1.17.0",
  "opencv-python-headless>=4.9.0",
  "pillow>=12.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "rapidocr>=3.0.0",
  "sentence-transformers>=2.2.2",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "transformers>=4.37.0",
  "uvicorn>=0.27.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
