[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "insightface>=0.7.3",
  "modelscope>=1.33.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.9.0",
  "pillow>=12.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "rapidocr>=3.0.0",
  "sentence-transformers",
  "ultralytics>=8.3.243",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
cpu = [
  "torch~=2.6.0",
  "torchvision~=0.21.0",
  "onnxruntime>=1.17.0",
]
cu128 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "onnxruntime-gpu>=1.17.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
